src/sections/WhatWeDo/WhatWeDo.module.scss
.container {
    display: flex;
    flex-direction: column;
    padding: 120px 0px 0px 0px;
    position: relative;
    align-items: center;
    height: 200vh;
    // background-color: beige;

    .line {
        margin: 0px 120px 300px 120px;
        border-top: 1px solid rgba(255, 255, 255, 0.3);
    }

    .line2 {
        margin: 0px 120px;
        border-top: 1px solid rgba(255, 255, 255, 0.3);
    }

    .marquee {
        position: absolute;
        top: 11%;
    }

    .itemsContainer {
        z-index: 1;
        padding: 38px 120px;
        max-width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-end;

        .itemsRow {
            height: 200px;
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 80px;

            .item {
                display: flex;
                margin: 0px 12px;
                align-items: center;
                flex-direction: column;
                
                .label {
                    margin-top: 12px;
                    color: #FF0044;
                    text-align: center;
                }
            }
        }
    }

    .currentItemContainer {
        display: flex;
        align-items: center;
        flex-direction: column;

        h2 {
            margin-top: 0px;
            font-size: 40px;
            color: #FF0044;
            margin-bottom: 20px;
            text-align: center;
            text-shadow: 0px 1.31394px 42px rgba(255, 0, 68, 0.84);
        }

        .currentItemDescription {
            font-size: 14px;
            text-align: center;
            margin-bottom: 20px;
        }

        button {
            display: flex;
            align-items: center;
            justify-content: center;
            background-color: transparent;
            width: 208px;
            border-radius: 100px;
            border: 0px;
            background-color: #FFFFFF;
            color: #000000;
            padding: 17px 0px;
        }
    }
}

